Fixed link and footer spacing

--- a/styles/contact.less
+++ b/styles/contact.less
@@ -24,10 +24,6 @@ html, body{
     section{
         height: 100%;
     }
-
-    footer{
-        margin-top: -135px;
-    }
 }
 
 
